Fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,4 @@
 @charset "UTF-8";
-/* NOTES *********************************************** */
-/* Font Inter ; Size 18px ; line-Height 1.6 ; Scale Factor 1.414 */
-
-/* NB !-- Add a reset... */
 
 body {
 	-webkit-font-smoothing: subpixel-antialiased;
@@ -107,9 +103,13 @@ ol ol,
 ul ol,
 ol ul {
 	margin-top: 0;
-	margin-bottom: 0;
+	margin-bottom: 0em;
 	font-size: 0.9rem; 
 	line-height: 1.15rem
+}
+
+ul li {
+	margin-bottom: 0.5em;
 }
 
 table td, table td * {
@@ -309,12 +309,12 @@ sub {
 	border-radius: 50px; 
 	font-family: Roboto;
 	text-transform: uppercase;
-	letter-spacing: .55rem;
+	letter-spacing: .35rem;
 	font-size: 1rem;
 	line-height: 2;
 	white-space: nowrap;
 	text-decoration: none;
-	padding: 0.35rem 3rem; 
+	padding: 0.45rem 2.5rem; 
 	margin: 0;
 	cursor: pointer;
 	transition: 0.3s;
@@ -332,19 +332,6 @@ sub {
 
 .float-right {
 	align-self: flex-end;
-}
-
-.button-icon svg {
-	width: 21px;
-	height: 21px;
-	padding-left: 8px !important;
-	margin-bottom: -5px !important;
-	margin-right: -16px !important;
-	margin-top: -3px !important;
-}
-
-.button-icon:hover svg {
-	filter: invert(0%);
 }
 
 
